Update README and AGENT_WORKFLOW for multiagent protocol, test integrity verification, and delivery plan enhancements: refine DEFAULT workflow, document supervised MULTIAGENT protocol, expand testing commands, and archive integrity changes.